# jentic-tools

./: .gitignore
mcp/: pyproject.toml
mcp/src/mcp/: handlers.py  tools.py
mcp/src/mcp/adapters/: mcp.py
mcp/src/mcp/transport/: http.py  stdio.py
mcp/tests/: test_mcp_submit_feedback_tool.py
python/: pyproject.toml
python/src/jentic/: models.py
python/src/jentic/agent_runtime/: config.py  tool_specs.py
python/src/jentic/api/: api_hub.py
python/tests/integration/: test_jentic_integration.py
